fixes layout issues with added flex to css, revert and inline instead

--- a/sass/views/userView.scss
+++ b/sass/views/userView.scss
@@ -4,8 +4,6 @@
     margin: 2px;
     margin-bottom: 5px;
     font-size: 0.9em;
-    display: flex;
-    align-items: center;
   }
 
   .col-1-7 {
